--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "author": "Cesar Gonzalez Lopez (DracoGilga)",
     "license": "ISC",
     "dependencies": {
+        "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "node-fetch": "^3.3.2"
     }
