--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "pruebatecnicaauronix",
     "version": "1.0.0",
     "description": "Elaboracioin de una API el cual permita consumir y filtrar los datos de rick & morty API",
+    "type": "module",
     "main": "index.js",
     "scripts": {
         "start": "node index.js"
@@ -9,8 +10,16 @@
     "author": "Cesar Gonzalez Lopez (DracoGilga)",
     "license": "ISC",
     "dependencies": {
-        "dotenv": "^16.4.7",
+        "dotenv": "^16.5.0",
         "express": "^4.21.2",
         "node-fetch": "^3.3.2"
-    }
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/DracoGilga/PruebaTecnicaAuronix.git"
+    },
+    "bugs": {
+        "url": "https://github.com/DracoGilga/PruebaTecnicaAuronix/issues"
+    },
+    "homepage": "https://github.com/DracoGilga/PruebaTecnicaAuronix#readme"
 }
